--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -9,7 +9,7 @@ Fonts are separated by a & */
   --primary-color: #388087   ;
   --secondary-color: #6FB3B8 ;
   --accent1-color: #BADFE7;
-  --accent2-color: #17252A;
+  --accent2-color: #C2EDCE;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Poppins", sans-serif;
