--- a/ice-3/styles/style.css
+++ b/ice-3/styles/style.css
@@ -43,7 +43,8 @@
   font-size: 45px; /* Adjust font size */
   color: #b30000; /* Red color */
   text-align: center;
-  margin-top: -200px;
+  position: relative;
+  top: -150px;
   letter-spacing: 10px;
 }
 
