--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -16,6 +16,8 @@ body {
 }
 
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: rgba(20, 30, 13, 0.7); /* Adds transparency */
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
@@ -24,11 +26,19 @@ footer {
     background-color: rgba(20, 30, 13, 0.7);
     font-size: 1.2em; /* Larger footer text */
     padding: 25px 50px;
-    margin-top: 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 h2 {
     margin: 0;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -44,7 +54,26 @@ nav a {
     text-decoration: underline; /* Adds underline on hover */
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr, 3fr, 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 #hero-msg h1, #hero-msg h4 {
+    color: white;
     text-align: center; /* Centers the text */
 }
 
@@ -61,6 +90,8 @@ main section img {
 }
 
 #background {
+    grid-column: 1/11;
+    grid-row: 4/9;
     height: 725px;
     background-color: #f0e6d2; /* Example background color */
 }
@@ -79,6 +110,8 @@ main section img {
 }
 
 .msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
     padding: 35px;
     background-color: #6f7364; /* Adds a background to the message */
     line-height: 1.5em;
@@ -121,6 +154,13 @@ footer .social img {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 
 .home-title {
@@ -128,10 +168,78 @@ footer .social img {
     margin-top: 10px;
 }
 
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
 
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
 .card-img {
     border: 10px solid black;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
