--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -115,6 +115,7 @@ main section img {
     padding: 35px;
     background-color: #6f7364; /* Adds a background to the message */
     line-height: 1.5em;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2 {
@@ -190,6 +191,7 @@ footer .social img {
 .mountains {
     grid-column: 2/7;
     grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .card-img, .mountains {
@@ -197,7 +199,14 @@ footer .social img {
 }
 
 .card-img {
-    border: 10px solid black;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 @media screen and (max-width: 900px) {
