--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -119,11 +119,11 @@ main section img {
 }
 
 .msg h2 {
-    color: #3C3F58;
+    color: white;
 }
 
 .msg p {
-    color: #5c5c5c;
+    color: white;
     padding-bottom: 15px;
 }
 
@@ -205,6 +205,53 @@ footer .social img {
 }
 
 .card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.hero-msg-2 {
+    padding-left: 300px;
+    padding-right: 300px;
+}
+
+.river-grid {
+    height: 50%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.river-msg {
+    padding-top: 10%;
+    padding-left: 5%;
+    padding-bottom: 5%;
+   grid-column: 1;
+   grid-row: 1/2;
+
+}
+
+.rivers-card-2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.msg-card {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #6f7364;
+    color: white;
+}
+
+.river-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 95%;
+    height: 100%;
+}
+
+.river-img:hover {
     opacity: .6;
     transform: scale(1.1);
 }
