--- a/old/styles/site-plan.css
+++ b/old/styles/site-plan.css
@@ -4,7 +4,6 @@ Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -14,8 +13,8 @@ Fonts are separated by a | */
   --accent2-color: #F6F6F6;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: 'Nunito', 'sans-serif';
-  --paragraph-font: 'Nunito', 'sans-serif';
+  --heading-font: "Bodoni Moda", serif;
+  --paragraph-font: "Roboto", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
