--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+
+/* Global Styles*/
 * {
     margin: 0;
     padding: 0;
@@ -32,11 +34,17 @@ body {
     color: var(--text-color);
 }
 
+span {
+    color: var(--main-color);
+}
+
 section {
     min-height: 100vh;
     padding: 10rem 9% 2rem;
 }
 
+
+/* Header */
 .header {
     position: fixed;
     top: 0;
@@ -72,7 +80,7 @@ section {
 
 .navbar a:hover, 
 .navbar a.active {
-    color: var(--text-color);
+    color: var(--main-color);
 }
 
 #menu-icon {
@@ -81,6 +89,7 @@ section {
     display: none;
 }
 
+/* Home Section*/
 .home {
     display: flex;
     justify-content: center;
@@ -94,12 +103,6 @@ section {
 
 .home-content h3:nth-of-type(2) {
     margin-bottom: 2rem;
-}
-
-span {
-    color: var(--main-color);
-    /* text-shadow: 0 0 5px rgba(243, 243, 243, 0.3),
-                 0 0 10px rgba(255, 255, 255, 0.3); */
 }
 
 .home-content h1 {
@@ -116,7 +119,7 @@ span {
     border-radius: 50%;
 
 }
-
+/* Youtube vid */
 @keyframes floatImage {
     0% {
         transform: translateY(0);
@@ -172,12 +175,14 @@ span {
     box-shadow: none;
 }
 
+
+/* About Section */
 .about {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    background: var(--snd-bg-color);
+    background: var(--bg-color);
 }
 
 .about-img img {
@@ -191,8 +196,8 @@ span {
 }
 
 .about-img:hover img {
-    transform: translateY(-10px); /* Slightly raise the image */
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2); /* Enhance the shadow */
+    transform: translateY(-10px); 
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2); 
 }
 
 .heading {
@@ -214,6 +219,7 @@ span {
     margin: 2rem 0 3rem;
 }
 
+/* Education and Experience Section */
 .education-content {
     justify-content: center;
     align-items: center;
@@ -265,8 +271,15 @@ span {
     line-height: 4rem;
 }
 
+.trad-logo {
+    max-width: 100px;
+    border-radius: 30%;
+}
+
+
+/* Projects Section */
 .projects {
-    background: var(--snd-bg-color);
+    background: var(--bg-color);
 }
 
 .scheme-logo {
@@ -291,20 +304,13 @@ span {
     border-radius: 15px;
 }
 
-.proj-img:hover {
-    transform: translateY(-10px); /* Slightly raise the image */
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2); /* Enhance the shadow */
-}
-
-.proj-img-scheme:hover {
-    transform: translateY(-10px); /* Slightly raise the image */
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2); /* Enhance the shadow */
-}
-
+.proj-img:hover,
+.proj-img-scheme:hover,
 .proj-img-aws:hover {
-    transform: translateY(-10px); /* Slightly raise the image */
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2); /* Enhance the shadow */
+    transform: translateY(-10px); 
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
 }
+
 
 .scheme {
     grid-column: 2/6;
@@ -349,22 +355,21 @@ span {
     grid-row: 3;
 }
 
+
+/* Hamburger Menu */
 #menu-icon {
-    display: none; /* Hidden by default */
+    display: none;
     font-size: 1.5rem;
     cursor: pointer;
     color: var(--main-color);
 }
 
-.trad-logo {
-    max-width: 100px;
-    border-radius: 30%;
-}
+/* Footer */
 
 .footer {
     background: var(--bg-color);
     color: var(--text-color);
-    padding: 0; /* Removed horizontal padding */
+    padding: 0; 
     display: flex;
     border-top: 1px solid var(--snd-bg-color);
 }
@@ -372,35 +377,18 @@ span {
 .footer-content {
     display: flex;
     align-items: center;
-    gap: 1rem; /* Adds space between the social link and the copyright */ /* Ensures the container spans the full width */
-    max-width: none; /* Removes max-width restriction */
-    margin: 0; /* Ensures no automatic centering occurs */
-    padding-left: 50px; /* Adds consistent padding only to the left */
+    gap: 1rem;
+    max-width: none; 
+    margin: 0; 
+    padding-left: 50px; 
 }
 
 .footer-left {
     font-size: 1.4rem;
 }
 
-.footer .social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 3.5rem;
-    height: 3.5rem;
-    background: transparent;
-    border: 0.3rem solid var(--main-color);
-    border-radius: 50%;
-    font-size: 1.8rem;
-    color: var(--main-color);
-    transition: background 0.3s ease, color 0.3s ease;
-}
 
-.footer .social-media a:hover {
-    background: var(--main-color);
-    color: var(--snd-bg-color);
-}
-
+/* Media Query */
 
 
 
@@ -410,8 +398,8 @@ span {
     }
 
     .about-content {
-        margin: 0 auto; /* Center the content since the image is removed */
-        text-align: center; /* Optional: Align text to the center for better aesthetics */
+        margin: 0 auto; 
+        text-align: center; 
     }
 
     .about-content h2 {
@@ -423,7 +411,7 @@ span {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 100%; /* Positioned below the header */
+        top: 100%; 
         right: 0;
         background-color: var(--bg-color);
         width: 100%;
